--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,4 @@
-viduals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
+# Contributors to the simple shell project in this repository
 
-
-
-Arubayi Ofome 
+Arubayi Ofome
 Emmanuel Omeje
